--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
@@ -3,7 +3,6 @@ slug: /164
 title: "React Hebdo #164: le grand retour! 30k, Next.js, Remix, Taint API, Activity, RSCs, React-Forget, Docusaurus, MDX, Storybook, Expo Orbit, Ignite, Victory XL, Reanimated, TypeScript..."
 authors: [slorber]
 date: 11-29-2023
-unlisted: true
 ---
 
 Salut à tous !
@@ -65,7 +64,7 @@ Voir aussi:
 - 🐦 [Andrew Clark - "React 19 coming soon"](https://twitter.com/acdlite/status/1719474730363662473)
 - 🐦 [Ryan Florence - "React Server Components on the Remix roadmap"](https://twitter.com/ryanflorence/status/1729274387671760936)
 - 👀 [React PR - `<Offscreen>` renamed as `<Activity>`](https://github.com/facebook/react/pull/27640): Dan Abramov explique que le nom `<Offscreen>` de cette prochaine feature Concurrent React était trompeur.
-- 👀 [React PR - Generate sourcemaps for production build artifacts](https://github.com/facebook/react/pull/26446): une bonne nouvelle pour améliorer la DX de nombreux produits, comme Sentry.
+- 👀 [React PR - Generate sourcemaps for production build artifacts](https://github.com/facebook/react/pull/26446): une bonne nouvelle pour améliorer la DX de nombreux produits pour debugger le build de prod, comme Sentry ou Replay.
 - 👀 [React Canary Changelog](https://github.com/facebook/react/blob/main/CHANGELOG-canary.md): comme prévu, les versions canaries de React ont commencé à être documentées correctement.
 - 📖 [React docs - "use server"](https://react.dev/reference/react/use-server)
 - 📖 [React docs - Taint API](https://react.dev/reference/react/experimental_taintObjectReference): nouvelle API expérimentale de sécurité pour éviter d'envoyer des données sensibles coté client avec les RSCs.
