--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/165/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/165/index.mdx
@@ -51,42 +51,42 @@ StyleX
 
 ---
 
+Redux:
+
+https://www.reddit.com/r/reactjs/comments/18aldn4/redux_toolkit_20_new_features_faster_perf_smaller/
+
 - [Redux Toolkit 2.0](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0)
 - [Redux 5.0](https://github.com/reduxjs/redux/releases/tag/v5.0.0)
 - [React-Redux 9.0](https://github.com/reduxjs/react-redux/releases/tag/v9.0.0)
 - [Reselect 5.0](https://github.com/reduxjs/reselect/releases/tag/v5.0.1)
 - Thunks 3.0
 
-Redux:
-
-https://www.reddit.com/r/reactjs/comments/18aldn4/redux_toolkit_20_new_features_faster_perf_smaller/
-
 ---
 
 - 💸 [Developer Nation Survey - What's next for developers in 2024 and beyond? Take the survey and win prizes!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad1)
-- [Remix RFC - Client Data (clientLoader, clientAction)](https://github.com/remix-run/remix/discussions/7634)
-- [Astro 4.0](https://astro.build/blog/astro-4/)
-- [Storybook 7.6](https://storybook.js.org/blog/storybook-7-6/)
-- [Remix Dev Tools 3.5 - Vite support](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v3.5.0)
-- [Lee Robinson - Introduction to Next.js and React](https://www.youtube.com/@leerob)
-- [Fastest Way of Passing State to JavaScript, Re-visited](https://calendar.perfplanet.com/2023/fastest-way-passing-state-javascript-revisited/ "Permanent Link to Fastest Way of Passing State to JavaScript, Re-visited") ???
-- [TanStack Router – modern React for the rest of us](https://swizec.com/blog/tanstack-router-modern-react-for-the-rest-of-us/)
-- [Keep Your Loader Data Fresh in Remix](https://sergiodxa.com/tutorials/keep-your-loader-data-fresh-in-remix)
-- [Using TanStack React Query v5 + Router](https://twitter.com/tannerlinsley/status/1730621837212876829)
-- [Starlight 0.14 - Plugin API](https://github.com/withastro/starlight/releases/tag/%40astrojs%2Fstarlight%400.14.0)
-- [A minimal dependency-free translation system for Next.js](https://www.thomasledoux.be/blog/minimal-dependency-free-translation-system-nextjs)
-- [Web Components Eliminate JavaScript Framework Lock-in](https://jakelazaroff.com/words/web-components-eliminate-javascript-framework-lock-in/)
-- [Handling HTML within React i18next translations](https://rafaelcamargo.com/blog/handling-html-within-react-i18next-translations/)
-- [Build your own StorybookGPT - automatically generates stories for React + TypeScript components](https://storybook.js.org/blog/build-your-own-storybook-gpt/)
-- [Jotai 2.6 - use `<Provider>` in React Server Components](https://github.com/pmndrs/jotai/releases/tag/v2.6.0)
-- [React Server Components Panel Discussion, React Summit US 2023](https://www.youtube.com/watch?v=ujaTs-5LEWM)
-- [An Introduction To Full Stack Composability](https://www.smashingmagazine.com/2023/11/introduction-full-stack-composability/)
-- [What's new in Astro - November 2023](https://astro.build/blog/whats-new-november-2023/)
-- [Google - Introducing React components for the Maps JavaScript API](https://cloud.google.com/blog/products/maps-platform/introducing-react-components-for-the-maps-javascript-api/)
-- [From CSS madness to CSS Hooks](https://nsaunders.dev/posts/css-madness-to-hooks)
-- [How does xxx compare to Panda CSS](https://www.astahmer.dev/posts/how-does-xxx-compares-to-panda-css)
-- [Tailwind has a scalability problem. How can we solve that?](https://byteofdev.com/posts/scale-tailwindcss/)
-- [How Relay Enables Optimal Data Fetching](https://relay.dev/blog/2023/10/24/how-relay-enables-optimal-data-fetching/)
+- 👀 [Remix RFC - Client Data (clientLoader, clientAction)](https://github.com/remix-run/remix/discussions/7634)
+- 🐦 [Using TanStack React Query v5 + Router](https://twitter.com/tannerlinsley/status/1730621837212876829)
+- 📜 [Fastest Way of Passing State to JavaScript, Re-visited](https://calendar.perfplanet.com/2023/fastest-way-passing-state-javascript-revisited/)
+- 📜 [TanStack Router – modern React for the rest of us](https://swizec.com/blog/tanstack-router-modern-react-for-the-rest-of-us/)
+- 📜 [Keep Your Loader Data Fresh in Remix](https://sergiodxa.com/tutorials/keep-your-loader-data-fresh-in-remix)
+- 📜 [A minimal dependency-free translation system for Next.js](https://www.thomasledoux.be/blog/minimal-dependency-free-translation-system-nextjs)
+- 📜 [Web Components Eliminate JavaScript Framework Lock-in](https://jakelazaroff.com/words/web-components-eliminate-javascript-framework-lock-in/)
+- 📜 [Handling HTML within React i18next translations](https://rafaelcamargo.com/blog/handling-html-within-react-i18next-translations/)
+- 📜 [Build your own StorybookGPT - automatically generates stories for React + TypeScript components](https://storybook.js.org/blog/build-your-own-storybook-gpt/)
+- 📜 [An Introduction To Full Stack Composability](https://www.smashingmagazine.com/2023/11/introduction-full-stack-composability/)
+- 📜 [What's new in Astro - November 2023](https://astro.build/blog/whats-new-november-2023/)
+- 📜 [Google - Introducing React components for the Maps JavaScript API](https://cloud.google.com/blog/products/maps-platform/introducing-react-components-for-the-maps-javascript-api/)
+- 📜 [From CSS madness to CSS Hooks](https://nsaunders.dev/posts/css-madness-to-hooks)
+- 📜 [How does xxx compare to Panda CSS](https://www.astahmer.dev/posts/how-does-xxx-compares-to-panda-css)
+- 📜 [Tailwind has a scalability problem. How can we solve that?](https://byteofdev.com/posts/scale-tailwindcss/)
+- 📜 [How Relay Enables Optimal Data Fetching](https://relay.dev/blog/2023/10/24/how-relay-enables-optimal-data-fetching/)
+- 📦 [Astro 4.0](https://astro.build/blog/astro-4/)
+- 📦 [Storybook 7.6](https://storybook.js.org/blog/storybook-7-6/)
+- 📦 [Remix Dev Tools 3.5 - Vite support](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v3.5.0)
+- 📦 [Starlight 0.14 - Plugin API](https://github.com/withastro/starlight/releases/tag/%40astrojs%2Fstarlight%400.14.0)
+- 📦 [Jotai 2.6 - use `<Provider>` in React Server Components](https://github.com/pmndrs/jotai/releases/tag/v2.6.0)
+- 🎥 [React Server Components Panel Discussion, React Summit US 2023](https://www.youtube.com/watch?v=ujaTs-5LEWM)
+- 🎥 [Lee Robinson - Introduction to Next.js and React](https://www.youtube.com/@leerob)
 
   <SubscribeFormEmbed placement="middle" />
 
@@ -108,32 +108,25 @@ Designed specifically for testing, Wallaby features include a [Time Travel Debug
 
 ## 📱 React-Native {#react-native}
 
-- [State of React Native 2023](https://survey.stateofreactnative.com/)
-- [How to change root view background color in React Native for iOS?](https://www.oskarkwasniewski.dev/blog/react-native-change-native-background-color)
-- [Expo Router - Migrate from Expo Webpack](https://docs.expo.dev/router/migrate/from-expo-webpack/)
-
-- [Universal Links are Important](https://evanbacon.dev/blog/universal-links) ???
-- [Expo - Introducing Build Annotations](https://expo.dev/changelog/2023/12-01-build-annotations)
-- [Expo - Speed up your development workflow with Automatic GitHub builds](https://expo.dev/changelog/2023/11-29-automatic-github-builds)
-- [Getting Started with React Native Skia](https://shopify.engineering/getting-started-with-react-native-skia)
-- ["Inspect Element" in iOS Safari with  Actions and Expo Config Plugins](https://twitter.com/Baconbrix/status/1731407884624310708)
-- [React Native Radio 281 - Real Life React Native : Benedikt Müller of Share My Stack](https://reactnativeradio.com/episodes/rnr-281-real-life-react-native-benedikt-muller-of-share-my-stack)
-- [React-Native-Skia - new text layout / paragraph support](https://shopify.github.io/react-native-skia/docs/text/paragraph/)
-- [React-Native 0.73 - Introducing Bridgeless Mode](https://github.com/reactwg/react-native-new-architecture/discussions/154)
-- [React-Native 0.74 - Will bump Android `minSdk` to v6 (API 23)](https://github.com/react-native-community/discussions-and-proposals/discussions/740)
-
-https://twitter.com/o_kwasniewski/status/1730294029844131916 ?
-
-https://twitter.com/swmansion/status/1730247333621723424
-
-https://twitter.com/o_kwasniewski/status/1729453555201802495
-https://twitter.com/o_kwasniewski/status/1732082471200522738
+- 📊 [State of React Native 2023](https://survey.stateofreactnative.com/)
+- 🐦 ["Inspect Element" in iOS Safari with  Actions and Expo Config Plugins](https://twitter.com/Baconbrix/status/1731407884624310708)
+- 📖 [Expo Router docs - Migrate from Expo Webpack](https://docs.expo.dev/router/migrate/from-expo-webpack/)
+- 💬 [React-Native 0.73 - Introducing Bridgeless Mode](https://github.com/reactwg/react-native-new-architecture/discussions/154)
+- 💬 [React-Native 0.74 - Will bump Android `minSdk` to v6 (API 23)](https://github.com/react-native-community/discussions-and-proposals/discussions/740)
+- 📜 [How to change root view background color in React Native for iOS?](https://www.oskarkwasniewski.dev/blog/react-native-change-native-background-color)
+- 📜 [Universal Links are Important](https://evanbacon.dev/blog/universal-links) ???
+- 📜 [Expo - Introducing Build Annotations](https://expo.dev/changelog/2023/12-01-build-annotations)
+- 📜 [Expo - Speed up your development workflow with Automatic GitHub builds](https://expo.dev/changelog/2023/11-29-automatic-github-builds)
+- 📜 [Getting Started with React Native Skia](https://shopify.engineering/getting-started-with-react-native-skia)
+- 📦 [React-Native-Skia - new text layout / paragraph support](https://shopify.github.io/react-native-skia/docs/text/paragraph/)
+- 📦 [React-Native-VisionOS](https://github.com/callstack/react-native-visionos): maintenant disponible sur npm (🐦 [demo](https://twitter.com/o_kwasniewski/status/1729453555201802495))
+- 🎙️ [React Native Radio 281 - Real Life React Native : Benedikt Müller of Share My Stack](https://reactnativeradio.com/episodes/rnr-281-real-life-react-native-benedikt-muller-of-share-my-stack)
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-- [Remix vs Next.js : Mon avis Tranché](https://www.youtube.com/watch?v=nuT6JOyVZho)
+- 🎥 [Remix vs Next.js - Mon avis Tranché](https://www.youtube.com/watch?v=nuT6JOyVZho)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -141,17 +134,17 @@ https://twitter.com/o_kwasniewski/status/1732082471200522738
 
 ## 🔀 Autre {#other}
 
-- [Updates from the 99th TC39 meeting](https://dev.to/hemanth/updates-from-the-99th-tc39-meeting-15hn)
-- [Vitest 1.0](https://github.com/vitest-dev/vitest/releases/tag/v1.0.0)
-- [XState 5.0](https://stately.ai/blog/2023-12-01-xstate-v5)
-- [Fresh 1.6 - Tailwind CSS plugin, simplified typings and more](https://deno.com/blog/fresh-1.6)
-- [Hono 3.11 - Error Boundary](https://github.com/honojs/hono/releases/tag/v3.11.0)
-- [Evan You on "bundle-less doesn't scale" discussions](https://twitter.com/youyuxi/status/1730537401217610234)
-- [Prettier's CLI: A Performance Deep Dive](https://prettier.io/blog/2023/11/30/cli-deep-dive)
-- [Let’s learn how modern JavaScript frameworks work by building one](https://nolanlawson.com/2023/12/02/lets-learn-how-modern-javascript-frameworks-work-by-building-one/)
-- [Track Frontend JavaScript exceptions with Playwright fixtures](https://www.checklyhq.com/blog/track-frontend-javascript-exceptions-with-playwright/)
-- [Biome formatter wins the Prettier challenge](https://biomejs.dev/blog/biome-wins-prettier-challenge/)
-- [CSS4 Is Coming](https://www.youtube.com/watch?v=j4mOm1qic7k) + https://github.com/orgs/CSS-Next/projects/1/views/2
+- 🧵 [Evan You about "bundle-less doesn't scale" discussions](https://twitter.com/youyuxi/status/1730537401217610234)
+- 📜 [Updates from the 99th TC39 meeting](https://dev.to/hemanth/updates-from-the-99th-tc39-meeting-15hn)
+- 📜 [Prettier's CLI: A Performance Deep Dive](https://prettier.io/blog/2023/11/30/cli-deep-dive)
+- 📜 [Biome formatter wins the Prettier challenge](https://biomejs.dev/blog/biome-wins-prettier-challenge/)
+- 📜 [Let’s learn how modern JavaScript frameworks work by building one](https://nolanlawson.com/2023/12/02/lets-learn-how-modern-javascript-frameworks-work-by-building-one/)
+- 📜 [Track Frontend JavaScript exceptions with Playwright fixtures](https://www.checklyhq.com/blog/track-frontend-javascript-exceptions-with-playwright/)
+- 📦 [Vitest 1.0](https://github.com/vitest-dev/vitest/releases/tag/v1.0.0)
+- 📦 [XState 5.0](https://stately.ai/blog/2023-12-01-xstate-v5)
+- 📦 [Fresh 1.6 - Tailwind CSS plugin, simplified typings and more](https://deno.com/blog/fresh-1.6)
+- 📦 [Hono 3.11 - Error Boundary](https://github.com/honojs/hono/releases/tag/v3.11.0)
+- 🎥 [CSS4 Is Coming](https://www.youtube.com/watch?v=j4mOm1qic7k)
 
 ---
 
