--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/165/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/165/index.mdx
@@ -80,8 +80,8 @@ Personnellement, j'ai toujours préféré la DX des inline styles, mais en prati
 - 📜 [A minimal dependency-free translation system for Next.js](https://www.thomasledoux.be/blog/minimal-dependency-free-translation-system-nextjs)
 - 📜 [An Introduction To Full Stack Composability](https://www.smashingmagazine.com/2023/11/introduction-full-stack-composability/)
 - 📦 [Redux Toolkit 2.0, Redux 5.0, React-Redux 9.0, Reselect 5.0, Redux-Thunk 3.0](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0): grosse update synchronisée de tous les packages Redux avec des nouvelles features (`combineSlices`), des améliorations de taille, performance, typing, et retrait des features deprecated.
-- 📦 [Astro 4.0](https://astro.build/blog/astro-4/)
-- 📦 [Storybook 7.6](https://storybook.js.org/blog/storybook-7-6/)
+- 📦 [Astro 4.0 - Dev Toolbar, i18n routing, Incremental Content Caching, View Transition APIs...](https://astro.build/blog/astro-4/)
+- 📦 [Storybook 7.6 - switch to SWC, faster, react-docgen upgrade, controls improvement, doctor CLI...](https://storybook.js.org/blog/storybook-7-6/)
 - 📦 [Remix Dev Tools 3.5 - Vite support](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v3.5.0)
 - 📦 [Starlight 0.14 - Plugin API](https://github.com/withastro/starlight/releases/tag/%40astrojs%2Fstarlight%400.14.0)
 - 📦 [Jotai 2.6 - use `<Provider>` in React Server Components](https://github.com/pmndrs/jotai/releases/tag/v2.6.0)
@@ -108,13 +108,12 @@ Designed specifically for testing, Wallaby features include a [Time Travel Debug
 
 ## 📱 React-Native {#react-native}
 
-- 📊 [State of React Native 2023](https://survey.stateofreactnative.com/)
+- 📊 [State of React Native 2023](https://survey.stateofreactnative.com/): le sondage React-Native revient pour la 2ème année. Vos réponses ont un impact, et vont permettre de prioriser les améliorations les plus demandées.
 - 🐦 ["Inspect Element" in iOS Safari with  Actions and Expo Config Plugins](https://twitter.com/Baconbrix/status/1731407884624310708)
 - 📖 [Expo Router docs - Migrate from Expo Webpack](https://docs.expo.dev/router/migrate/from-expo-webpack/)
-- 💬 [React-Native 0.73 - Introducing Bridgeless Mode](https://github.com/reactwg/react-native-new-architecture/discussions/154)
+- 💬 [React-Native 0.73 - Introducing Bridgeless Mode](https://github.com/reactwg/react-native-new-architecture/discussions/154): React-Native 0.73 propose un nouveau flag qui permet de ne plus du tout initialiser le bridge de l'ancienne architecture, qui restait utilisé pour certaines features: error handling, event emitters, timers... Un "interop layer" devrait faciliter la transition, mais certains appels API doivent être migrés manuellement.
 - 💬 [React-Native 0.74 - Will bump Android `minSdk` to v6 (API 23)](https://github.com/react-native-community/discussions-and-proposals/discussions/740)
 - 📜 [How to change root view background color in React Native for iOS?](https://www.oskarkwasniewski.dev/blog/react-native-change-native-background-color)
-- 📜 [Universal Links are Important](https://evanbacon.dev/blog/universal-links) ???
 - 📜 [Expo - Introducing Build Annotations](https://expo.dev/changelog/2023/12-01-build-annotations)
 - 📜 [Expo - Speed up your development workflow with Automatic GitHub builds](https://expo.dev/changelog/2023/11-29-automatic-github-builds)
 - 📜 [Getting Started with React Native Skia](https://shopify.engineering/getting-started-with-react-native-skia)
