--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/165/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/165/index.mdx
@@ -113,11 +113,11 @@ Designed specifically for testing, Wallaby features include a [Time Travel Debug
 - 📖 [Expo Router docs - Migrate from Expo Webpack](https://docs.expo.dev/router/migrate/from-expo-webpack/)
 - 💬 [React-Native 0.73 - Introducing Bridgeless Mode](https://github.com/reactwg/react-native-new-architecture/discussions/154): React-Native 0.73 propose un nouveau flag qui permet de ne plus du tout initialiser le bridge de l'ancienne architecture, qui restait utilisé pour certaines features: error handling, event emitters, timers... Un "interop layer" devrait faciliter la transition, mais certains appels API doivent être migrés manuellement.
 - 💬 [React-Native 0.74 - Will bump Android `minSdk` to v6 (API 23)](https://github.com/react-native-community/discussions-and-proposals/discussions/740)
+- 📜 [Shopify - Getting Started with React Native Skia](https://shopify.engineering/getting-started-with-react-native-skia): une bonne intro à React-Native-Skia, pourquoi l'utiliser, son intégration avec Reanimated, ses effets intégrés, son support web...
 - 📜 [How to change root view background color in React Native for iOS?](https://www.oskarkwasniewski.dev/blog/react-native-change-native-background-color)
-- 📜 [Expo - Introducing Build Annotations](https://expo.dev/changelog/2023/12-01-build-annotations)
-- 📜 [Expo - Speed up your development workflow with Automatic GitHub builds](https://expo.dev/changelog/2023/11-29-automatic-github-builds)
-- 📜 [Getting Started with React Native Skia](https://shopify.engineering/getting-started-with-react-native-skia)
-- 📦 [React-Native-Skia - new text layout / paragraph support](https://shopify.github.io/react-native-skia/docs/text/paragraph/)
+- 📜 [Expo EAS - Speed up your development workflow with Automatic GitHub builds](https://expo.dev/changelog/2023/11-29-automatic-github-builds)
+- 📜 [Expo EAS - Introducing Build Annotations](https://expo.dev/changelog/2023/12-01-build-annotations)
+- 📦 [React-Native-Skia - Text layouts / Paragraph support](https://shopify.github.io/react-native-skia/docs/text/paragraph/)
 - 📦 [React-Native-VisionOS](https://github.com/callstack/react-native-visionos): maintenant disponible sur npm (🐦 [demo](https://twitter.com/o_kwasniewski/status/1729453555201802495))
 - 🎙️ [React Native Radio 281 - Real Life React Native : Benedikt Müller of Share My Stack](https://reactnativeradio.com/episodes/rnr-281-real-life-react-native-benedikt-muller-of-share-my-stack)
 
@@ -141,9 +141,9 @@ Designed specifically for testing, Wallaby features include a [Time Travel Debug
 - 📜 [Let’s learn how modern JavaScript frameworks work by building one](https://nolanlawson.com/2023/12/02/lets-learn-how-modern-javascript-frameworks-work-by-building-one/)
 - 📜 [Web Components Eliminate JavaScript Framework Lock-in](https://jakelazaroff.com/words/web-components-eliminate-javascript-framework-lock-in/)
 - 📜 [Track Frontend JavaScript exceptions with Playwright fixtures](https://www.checklyhq.com/blog/track-frontend-javascript-exceptions-with-playwright/)
-- 📦 [Vitest 1.0](https://github.com/vitest-dev/vitest/releases/tag/v1.0.0)
-- 📦 [XState 5.0](https://stately.ai/blog/2023-12-01-xstate-v5)
+- 📦 [XState 5.0 - Everything is an actor](https://stately.ai/blog/2023-12-01-xstate-v5)
 - 📦 [Fresh 1.6 - Tailwind CSS plugin, simplified typings and more](https://deno.com/blog/fresh-1.6)
+- 📦 [Vitest 1.0](https://github.com/vitest-dev/vitest/releases/tag/v1.0.0)
 - 📦 [Hono 3.11 - Error Boundary](https://github.com/honojs/hono/releases/tag/v3.11.0)
 - 🎥 [CSS4 Is Coming](https://www.youtube.com/watch?v=j4mOm1qic7k)
 
@@ -151,18 +151,6 @@ Designed specifically for testing, Wallaby features include a [Time Travel Debug
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/jh3yy/status/1731401136811147444
-
-https://twitter.com/benawad/status/1731080995191787735
-
-https://twitter.com/supabase/status/1731007091769274662
-
-https://twitter.com/trashh_dev/status/1729889686154584485
-
-https://twitter.com/bndkt/status/1729743347370139940
-
-https://twitter.com/stackblitz/status/1731713277904703658
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/165/meme.jpg)](https://twitter.com/bndkt/status/1729743347370139940)
 
 A plus 👋
